--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- autenticacion con jwt -->
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>2.3.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-jwt</artifactId>
+			<version>1.0.9.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
